# VLA_drone_data_collector

./: .gitignore  README.md  dataset_context.md  export_rlds_tfds.py  main.py  pyproject.toml  resize_episode_images.py  rlds_tfds_builder.py
