[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "mss>=10.1.0",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "tensorflow>=2.17.0",
    "tensorflow-datasets>=4.9.6",
    "uvicorn>=0.44.0",
]
